sema/testdata/gcc-c90-as-c99/reject/redecl-4.c
void
f (void)
{
  int printf;
  int strcmp;
  {
    int printf (const char *, ...);
    int strcmp ();


    printf (
	    "%s", 1);

    if (0)
      strcmp (1);

    if (0)
      memcmp (1);
  }
}


int strcmp (void);
